tests/fail/Bitwise.java
package pass;

public class Bitwise {
    public int unaryComplement(int x) {
        return ~x;
    }
    public boolean or(boolean x, String y){
        return x | y;
    }
    public boolean exclusiveOr(boolean x, String y){
        return x ^ y;
    }
    public boolean and(boolean x, String y){
        return x & y;
    }
}
